[package]
name = "bender"
version = "0.26.1-pickle"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>", "Andreas Kurth <akurth@iis.ee.ethz.ch>", "Michael Rogenmoser <michael@rogenmoser.us>"]
repository = "https://github.com/pulp-platform/bender"
description = "A dependency management tool for hardware projects."
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.9"
serde_json = "1"

futures = "0.3"
tokio = { version = "1.20", features = ["full"] }
async-recursion = "1.0"

clap = { version = "3.1", features = ["derive"] }
semver = "1.0"
blake2 = "0.10"
typed-arena = "2"
dirs = "4"
pathdiff = "0.2"
common-path = "1.0.0"
itertools = "0.10"
atty = "0.2"
tabwriter = "1.2.1"
indexmap = "1.8.1"
tempdir = "0.3.7"
glob = "0.3"

anyhow = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
simple_logger = { version = "1.6", optional = true }
morty = { version = "0.8.0", optional = true }

[features]
pickle = [ "dep:anyhow", "dep:log", "dep:simple_logger", "dep:morty" ]
